# cmake_fortran_template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cmake_fortran_template.code-workspace
cmake/: CheckFortran90Support.cmake  DefaultBuildType.cmake  SetUpLAPACK.cmake
cmake/Modules/: SetUpLAPACK.cmake
src/bar/: CMakeLists.txt  bar.f90
src/barlib/: CMakeLists.txt
src/foo/: CMakeLists.txt  constants.f90  foo.f90
